src/test/ui/suggestions/suggest-variants.stderr
error: no variant `Squareee` in enum `Shape`
  --> $DIR/suggest-variants.rs:12:41
   |
LL | enum Shape {
   | ---------- variant `Squareee` not found here
...
LL |     println!("My shape is {:?}", Shape::Squareee { size: 5});
   |                                         ^^^^^^^^ help: there is a variant with a similar name: `Square`

error: no variant `Circl` in enum `Shape`
  --> $DIR/suggest-variants.rs:13:41
   |
LL | enum Shape {
   | ---------- variant `Circl` not found here
...
LL |     println!("My shape is {:?}", Shape::Circl { size: 5});
   |                                         ^^^^^ help: there is a variant with a similar name: `Circle`

error: no variant `Rombus` in enum `Shape`
  --> $DIR/suggest-variants.rs:14:41
   |
LL | enum Shape {
   | ---------- variant `Rombus` not found here
...
LL |     println!("My shape is {:?}", Shape::Rombus{ size: 5});
   |                                  -------^^^^^^
   |                                  |
   |                                  variant not found in `Shape`

error[E0599]: no variant or associated item named `Squareee` found for type `Shape` in the current scope
  --> $DIR/suggest-variants.rs:15:12
   |
LL | enum Shape {
   | ---------- variant or associated item `Squareee` not found here
...
LL |     Shape::Squareee;
   |            ^^^^^^^^
   |            |
   |            variant or associated item not found in `Shape`
   |            help: there is a variant with a similar name: `Square`

error[E0599]: no variant or associated item named `Circl` found for type `Shape` in the current scope
  --> $DIR/suggest-variants.rs:16:12
   |
LL | enum Shape {
   | ---------- variant or associated item `Circl` not found here
...
LL |     Shape::Circl;
   |            ^^^^^
   |            |
   |            variant or associated item not found in `Shape`
   |            help: there is a variant with a similar name: `Circle`

error[E0599]: no variant or associated item named `Rombus` found for type `Shape` in the current scope
  --> $DIR/suggest-variants.rs:17:12
   |
LL | enum Shape {
   | ---------- variant or associated item `Rombus` not found here
...
LL |     Shape::Rombus;
   |            ^^^^^^ variant or associated item not found in `Shape`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0599`.
